program/antlr/repeat_arrParser.py
# Generated from repeat_arr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class repeat_arrParser ( Parser ):

    grammarFileName = "repeat_arr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'fn'", "'call'", "'if'", "'return'", 
                     "'ref'", "'repeat'", "'local'", "'global'", "'TRUE'", 
                     "'FALSE'", "'<='", "'=='", "'<'", "'!='", "'>='", "'>'", 
                     "'&'", "'|'", "'=>'", "'<=>'", "'='", "'+'", "'-'", 
                     "','", "'('", "')'", "'['", "']'", "<INVALID>", "<INVALID>", 
                     "'@fn'" ]

    symbolicNames = [ "<INVALID>", "FN", "CALL", "IF", "RETURN", "REF", 
                      "REPEAT", "LOCAL", "GLOBAL", "TRUE", "FALSE", "LE", 
                      "EQ", "LT", "NEQ", "GE", "GT", "AND", "OR", "IMPL", 
                      "EQUIV", "ASSIGN", "PLUS", "MINUS", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACK", "RBRACK", "INTEGER", "ID", "ATFN", 
                      "WS" ]

    RULE_program = 0
    RULE_varDecl = 1
    RULE_functionDecl = 2
    RULE_paramList = 3
    RULE_varList = 4
    RULE_stmt = 5
    RULE_call = 6
    RULE_argList = 7
    RULE_arg = 8
    RULE_assign = 9
    RULE_ret = 10
    RULE_expr = 11
    RULE_atom = 12
    RULE_var = 13

    ruleNames =  [ "program", "varDecl", "functionDecl", "paramList", "varList", 
                   "stmt", "call", "argList", "arg", "assign", "ret", "expr", 
                   "atom", "var" ]

    EOF = Token.EOF
    FN=1
    CALL=2
    IF=3
    RETURN=4
    REF=5
    REPEAT=6
    LOCAL=7
    GLOBAL=8
    TRUE=9
    FALSE=10
    LE=11
    EQ=12
    LT=13
    NEQ=14
    GE=15
    GT=16
    AND=17
    OR=18
    IMPL=19
    EQUIV=20
    ASSIGN=21
    PLUS=22
    MINUS=23
    COMMA=24
    LPAREN=25
    RPAREN=26
    LBRACK=27
    RBRACK=28
    INTEGER=29
    ID=30
    ATFN=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(repeat_arrParser.EOF, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.VarDeclContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return repeat_arrParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = repeat_arrParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.varDecl()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==7 or _la==8):
                    break

            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 33
                self.functionDecl()
                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 38
            self.match(repeat_arrParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOCAL(self):
            return self.getToken(repeat_arrParser.LOCAL, 0)

        def varList(self):
            return self.getTypedRuleContext(repeat_arrParser.VarListContext,0)


        def GLOBAL(self):
            return self.getToken(repeat_arrParser.GLOBAL, 0)

        def getRuleIndex(self):
            return repeat_arrParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = repeat_arrParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDecl)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(repeat_arrParser.LOCAL)
                self.state = 41
                self.varList()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.match(repeat_arrParser.GLOBAL)
                self.state = 43
                self.varList()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(repeat_arrParser.FN, 0)

        def INTEGER(self):
            return self.getToken(repeat_arrParser.INTEGER, 0)

        def LPAREN(self):
            return self.getToken(repeat_arrParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(repeat_arrParser.RPAREN, 0)

        def paramList(self):
            return self.getTypedRuleContext(repeat_arrParser.ParamListContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.StmtContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.StmtContext,i)


        def getRuleIndex(self):
            return repeat_arrParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = repeat_arrParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(repeat_arrParser.FN)
            self.state = 47
            self.match(repeat_arrParser.INTEGER)
            self.state = 48
            self.match(repeat_arrParser.LPAREN)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30 or _la==31:
                self.state = 49
                self.paramList()


            self.state = 52
            self.match(repeat_arrParser.RPAREN)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.stmt()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3221225564) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varList(self):
            return self.getTypedRuleContext(repeat_arrParser.VarListContext,0)


        def getRuleIndex(self):
            return repeat_arrParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = repeat_arrParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.varList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.VarContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.VarContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(repeat_arrParser.COMMA)
            else:
                return self.getToken(repeat_arrParser.COMMA, i)

        def getRuleIndex(self):
            return repeat_arrParser.RULE_varList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarList" ):
                listener.enterVarList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarList" ):
                listener.exitVarList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarList" ):
                return visitor.visitVarList(self)
            else:
                return visitor.visitChildren(self)




    def varList(self):

        localctx = repeat_arrParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.var()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 61
                self.match(repeat_arrParser.COMMA)
                self.state = 62
                self.var()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self):
            return self.getTypedRuleContext(repeat_arrParser.CallContext,0)


        def assign(self):
            return self.getTypedRuleContext(repeat_arrParser.AssignContext,0)


        def ret(self):
            return self.getTypedRuleContext(repeat_arrParser.RetContext,0)


        def REPEAT(self):
            return self.getToken(repeat_arrParser.REPEAT, 0)

        def getRuleIndex(self):
            return repeat_arrParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = repeat_arrParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.call()
                pass
            elif token in [30, 31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.assign()
                pass
            elif token in [3, 4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.ret()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.match(repeat_arrParser.REPEAT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALL(self):
            return self.getToken(repeat_arrParser.CALL, 0)

        def expr(self):
            return self.getTypedRuleContext(repeat_arrParser.ExprContext,0)


        def LPAREN(self):
            return self.getToken(repeat_arrParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(repeat_arrParser.RPAREN, 0)

        def argList(self):
            return self.getTypedRuleContext(repeat_arrParser.ArgListContext,0)


        def getRuleIndex(self):
            return repeat_arrParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = repeat_arrParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(repeat_arrParser.CALL)
            self.state = 75
            self.expr(0)
            self.state = 76
            self.match(repeat_arrParser.LPAREN)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3221225504) != 0):
                self.state = 77
                self.argList()


            self.state = 80
            self.match(repeat_arrParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.ArgContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.ArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(repeat_arrParser.COMMA)
            else:
                return self.getToken(repeat_arrParser.COMMA, i)

        def getRuleIndex(self):
            return repeat_arrParser.RULE_argList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgList" ):
                listener.enterArgList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgList" ):
                listener.exitArgList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = repeat_arrParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.arg()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 83
                self.match(repeat_arrParser.COMMA)
                self.state = 84
                self.arg()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REF(self):
            return self.getToken(repeat_arrParser.REF, 0)

        def var(self):
            return self.getTypedRuleContext(repeat_arrParser.VarContext,0)


        def getRuleIndex(self):
            return repeat_arrParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = repeat_arrParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arg)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(repeat_arrParser.REF)
                self.state = 91
                self.var()
                pass
            elif token in [30, 31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.var()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(repeat_arrParser.VarContext,0)


        def ASSIGN(self):
            return self.getToken(repeat_arrParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.ExprContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.ExprContext,i)


        def LBRACK(self):
            return self.getToken(repeat_arrParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(repeat_arrParser.RBRACK, 0)

        def getRuleIndex(self):
            return repeat_arrParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = repeat_arrParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.var()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 96
                self.match(repeat_arrParser.LBRACK)
                self.state = 97
                self.expr(0)
                self.state = 98
                self.match(repeat_arrParser.RBRACK)


            self.state = 102
            self.match(repeat_arrParser.ASSIGN)
            self.state = 103
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(repeat_arrParser.RETURN, 0)

        def IF(self):
            return self.getToken(repeat_arrParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(repeat_arrParser.ExprContext,0)


        def getRuleIndex(self):
            return repeat_arrParser.RULE_ret

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet" ):
                listener.enterRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet" ):
                listener.exitRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet" ):
                return visitor.visitRet(self)
            else:
                return visitor.visitChildren(self)




    def ret(self):

        localctx = repeat_arrParser.RetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ret)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 105
                self.match(repeat_arrParser.IF)
                self.state = 106
                self.expr(0)


            self.state = 109
            self.match(repeat_arrParser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return repeat_arrParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ArithExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a repeat_arrParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.ExprContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(repeat_arrParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(repeat_arrParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithExpr" ):
                listener.enterArithExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithExpr" ):
                listener.exitArithExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithExpr" ):
                return visitor.visitArithExpr(self)
            else:
                return visitor.visitChildren(self)


    class ComparisonExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a repeat_arrParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.ExprContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.ExprContext,i)

        def EQ(self):
            return self.getToken(repeat_arrParser.EQ, 0)
        def LE(self):
            return self.getToken(repeat_arrParser.LE, 0)
        def LT(self):
            return self.getToken(repeat_arrParser.LT, 0)
        def NEQ(self):
            return self.getToken(repeat_arrParser.NEQ, 0)
        def GE(self):
            return self.getToken(repeat_arrParser.GE, 0)
        def GT(self):
            return self.getToken(repeat_arrParser.GT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonExpr" ):
                listener.enterComparisonExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonExpr" ):
                listener.exitComparisonExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparisonExpr" ):
                return visitor.visitComparisonExpr(self)
            else:
                return visitor.visitChildren(self)


    class ConnExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a repeat_arrParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.ExprContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.ExprContext,i)

        def IMPL(self):
            return self.getToken(repeat_arrParser.IMPL, 0)
        def EQUIV(self):
            return self.getToken(repeat_arrParser.EQUIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConnExpr" ):
                listener.enterConnExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConnExpr" ):
                listener.exitConnExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnExpr" ):
                return visitor.visitConnExpr(self)
            else:
                return visitor.visitChildren(self)


    class AtomExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a repeat_arrParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(repeat_arrParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomExpr" ):
                listener.enterAtomExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomExpr" ):
                listener.exitAtomExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpr" ):
                return visitor.visitAtomExpr(self)
            else:
                return visitor.visitChildren(self)


    class LogicalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a repeat_arrParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(repeat_arrParser.ExprContext)
            else:
                return self.getTypedRuleContext(repeat_arrParser.ExprContext,i)

        def AND(self):
            return self.getToken(repeat_arrParser.AND, 0)
        def OR(self):
            return self.getToken(repeat_arrParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpr" ):
                listener.enterLogicalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpr" ):
                listener.exitLogicalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExpr" ):
                return visitor.visitLogicalExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = repeat_arrParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = repeat_arrParser.AtomExprContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 112
            self.atom()
            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 126
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = repeat_arrParser.ComparisonExprContext(self, repeat_arrParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 114
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 115
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 129024) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.expr(6)
                        pass
